@@ -20,7 +20,11 @@ java-common (0.49) UNRELEASED; urgency=low
     - Minor improvements
     - State the license of the policy (Closes: #687841)
 
- -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 05 Jun 2013 14:11:41 +0200
+  [ Matthias Klose ]
+  * Don't blindly update to OpenJDK7 on architectures where it is not
+    supported or not even built.
+
+ -- Matthias Klose <doko@debian.org>  Sun, 30 Jun 2013 18:54:53 +0200
 
 java-common (0.48) experimental; urgency=low
 
